--- a/style.css
+++ b/style.css
@@ -51,8 +51,110 @@ img {
 /* header */
 
 .header {
-  padding: 28px 0;
+  display: flex;
+    align-items: center;
+    height: 70px;
+    padding: 0 15px;
+    position: relative;
 }
+.menu {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav {
+  align-self: center;
+  
+}
+
+.menu__toggle{
+  position: absolute;
+  left: -99999999px;
+  opacity: 0;
+  visibility: hidden;
+}
+.menu__toggle:checked ~ .nav-list{
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease-in;
+}
+.menu__toggle:checked +.menu__btn span {
+  opacity: 0;
+  visibility: hidden;
+}
+.menu__toggle:checked +.menu__btn::before
+{
+top: 10px;
+  transform: rotate(135deg);
+  transition: transform 1s ease;
+}
+.menu__toggle:checked +.menu__btn::after
+{
+
+top: 10px;   
+  transform: rotate(-135deg) ;
+  transition: transform 1s ease;
+}
+.menu__btn {
+  position: relative;
+height: 20px;
+width: 30px;
+
+}
+.menu__btn::before,
+.menu__btn::after,
+.menu__btn span
+{
+  height: 3px;
+  
+  border-radius: 2px;
+  background: black;
+  position: absolute;
+  left: 0;
+  right: 0;
+
+}
+.menu__btn::before {
+  content: '';
+  top: 0;
+}
+.menu__btn::after {
+content: '';
+  bottom: 0;
+}
+.menu__btn span {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    line-height: 2;
+    background: white;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    height:  0;
+   
+    visibility: hidden;
+    transition: all 0.3s ease-in;
+  
+}
+
+.nav-item {
+  margin-bottom: 15px;
+}
+
 
 .header a {
   color: #1f373d;
@@ -86,6 +188,7 @@ img {
 .login-list {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   list-style: none;
 }
 
@@ -103,7 +206,12 @@ img {
   display: flex;
   justify-content: flex-end;
 }
-
+#menu__toggle {
+  position: absolute;
+  left: -9999999px;
+  opacity: 0;
+  visibility: hidden;
+}
 .nav-list {
   display: flex;
   padding: 0;
@@ -272,9 +380,7 @@ img {
   display: flex;
   position: relative;
   margin-top: 150px;
-  height: 450px;
- 
-  
+  height: auto;
 }
 .our-wrap .textArea {
   
@@ -300,7 +406,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   width: 50%;
-  height: inherit;
+  height: auto;
   
 }
 .our-wrap .boxarea .box {
@@ -338,7 +444,7 @@ img {
 .appForRent {
   margin-top: 80px;
   background: #f6f5f4;
-  height: 1500px;
+  height: auto;
 }
 
 .appForRent .container .metatext h1{
@@ -437,6 +543,8 @@ opacity: 0.8;
 
  .form-group2 {
   display: flex;
+  height: auto;
+  padding-bottom: 60px;
 }
 
 .form-group2  input {
@@ -516,7 +624,8 @@ opacity: 0.8;
 {
   cursor: pointer;
   display: flex;
-background-color: aqua;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.329);
+background-color: #ffffff;
 overflow-y: hidden;
 flex-wrap: wrap;
 width: 350px;
@@ -537,6 +646,7 @@ height: 350px;
   transition: all 0.3s ease-in;
   background: white;
 }
+
 .activeBox .upperNumber{
   position: relative;
   top: 0;
@@ -548,9 +658,9 @@ height: 350px;
 {
   margin-bottom: 0;
   
-  position: relative;
+  position: absolute;
   left: -35px;
-  top: -133px;
+  top: -45px;
   font-size: 130px;
 }
 .mainText
@@ -629,6 +739,9 @@ font-size: 14px;
   font-size: 36px;
   
 }
+.services {
+  height: auto;
+}
 .services  .container .metatext p {
   font-size: 12px;
   line-height: 2;
@@ -639,7 +752,7 @@ font-size: 14px;
 .contentPart
 {
   display: flex;
-  height: 630px;
+  height: auto;
   width: inherit;
   
 }
@@ -653,7 +766,8 @@ font-size: 14px;
   margin: 0;
   width: 50%;
   background: #acd1e1;
-  height: 630px;
+  min-height: 650px;
+  height: auto;
 }
 .contentPart .textPart {
   
@@ -803,20 +917,21 @@ opacity: 0.8;
   display: flex;
   
   height: 330px;
-  width: 540px;
+  width: 50%;
  
   background: #8da4be;
 }
-.mainBlock .backBox .locationBox
-{
-  position: relative;
-  height: 80px;
-  width: 335px;
-  background: #ffcc01;
-  left: 20%;
-  top: 85%;
-  text-align: center;
-}
+  .mainBlock .backBox .locationBox
+  {
+    position: relative;
+    height: 80px;
+    width: 65%;
+    
+    background: #ffcc01;
+    left: 20%;
+    top: 85%;
+    text-align: center;
+  }
 .mainBlock .backBox .locationBox h3
 {
   position: relative;
@@ -833,7 +948,7 @@ opacity: 0.8;
 {
   
   position: relative;
-  width: 440px;
+  width: 45%;
   height: 170px;
   line-height: 2;
   top: 30%;
@@ -847,7 +962,7 @@ opacity: 0.8;
 }
 .mainBlock2
 {
-  margin-top: 90px;
+    margin-top: 90px;
   display: flex;
   width: 100%;
   height: 380px;
@@ -857,14 +972,14 @@ opacity: 0.8;
 {
   display: flex;
   height: 330px;
-  width: 540px;
+  width: 45%;
   background: #8da4be;
 }
 .mainBlock2 .backBox2 .locationBox2
 {
   position: relative;
   height: 80px;
-  width: 335px;
+  width: 65%;
   background: #ffcc01;
   left: 50%;
   top: 85%;
@@ -874,6 +989,7 @@ opacity: 0.8;
 {
   position: relative;
   top: 25%;
+  
   font-size: 16px;
   padding-top: 10px;
   height: 30px;
@@ -886,7 +1002,7 @@ opacity: 0.8;
 {
   
   position: relative;
-  width: 440px;
+  width: 45%;
   height: 170px;
   margin-right: 130px;
   line-height: 2;
@@ -912,9 +1028,9 @@ opacity: 0.8;
 {
   display: flex;
   
-  height: 330px;
-  width: 540px;
- 
+  height: auto;
+  width: 45%;
+ margin-bottom: 50px;
   background: #8da4be;
 }
 .mainBlock3 .textBox3 .locationBox3
@@ -923,6 +1039,7 @@ opacity: 0.8;
   height: 80px;
   width: 240px;
   margin-top: 30px;
+  
   background: #1f373d;
   color: #fff;
   text-align: center;
@@ -942,8 +1059,8 @@ opacity: 0.8;
 {
   
   position: relative;
-  width: 440px;
-  height: 170px;
+  width: 45%;
+  height: auto;
   line-height: 2;
   top: 10%;
   left: 10%;
@@ -962,7 +1079,7 @@ opacity: 0.8;
   height: 530px;
   background:#1f373d;
 }
-.uppContent{
+.footer .uppContent{
   margin-top: 50px;
   justify-content: space-between;
   display: flex;
@@ -996,6 +1113,10 @@ opacity: 0.8;
   width: 475px;
   height: 70px;
 }
+input:active, input:hover, input:focus {
+  outline: 0;
+  outline-offset: 0;
+}
 .uppContent .underline
 {
   position: absolute;
@@ -1005,3 +1126,625 @@ opacity: 0.8;
   background: white;
   height: 2px;
 }
+.footer .downContent{
+  position: relative;
+  left: 0;
+  margin-top: 10%;
+  display: flex;
+  height: 50%;
+  width: 100%;
+}
+.footer .downContent .footer-logo{
+  
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  
+  
+}
+
+.downContent .footer-logo a {
+  
+  color: #fff;
+  text-decoration: none;
+}
+
+.downContent .footer-logo a:hover {
+  text-decoration: underline;
+}
+
+.downContent .footer-logo p {
+  position: relative;
+  color: #fff;
+  font-size: 11px;
+  width: 110px;
+  
+  font-weight: 500;
+}
+.downContent .mainContent 
+{
+  position: relative;
+  display: flex;
+  top: 50px;
+  justify-content: space-between;
+  color: #fff;
+  margin-left: 150px;
+  width: 500px;
+  font-weight: 500;
+}
+.downContent .mainContent ul
+{
+  position: relative;
+  margin-left: 80px;
+}
+.downContent .mainContent h5
+{
+  margin-bottom: 50px;
+  color: #919eb1;
+}
+.downContent .mainContent li
+{
+  margin-bottom: 15px;
+list-style: none;
+}
+.downContent .mainContent a
+{
+  text-decoration: none;
+  font-size: 13px;
+  color: white;
+}
+
+.downContent .mainContent a:hover
+{
+  text-decoration: underline;
+}
+
+@media (min-width: 0px) and (max-width: 579px)
+{
+    
+  .header-nav
+  {
+    flex-direction: row;
+    
+  }
+  .footer {
+    display: none;
+  }
+  .contact-list 
+  {
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+    height: 50px;
+    bottom:0;
+    right: 0;
+    padding: 0;
+    margin: 0;
+    background: #ffcc01;
+    text-align: center;
+    text-decoration: none;
+  }
+  .contact-list .phone
+  {
+    position: relative;
+    top: 45%;
+    
+    left: 5%;
+  
+    font-size: 8px;
+  }
+  .contact-list .country
+  {
+    position: relative;
+    top: 45%;
+    left: auto;
+    right: 0;
+    
+    font-size: 8px;
+    
+  }
+  .our-wrap .boxarea .box {
+    width: 130px;
+    height: 130px;
+  }
+
+  .boxarea .box p
+{
+  top: 15%;
+}
+.appExamples
+{
+  justify-content: center;
+}
+.appExamples .box {
+  
+  display: flex;
+  width: 350px;
+  height:380px;
+  background: #b1d7e8;
+}
+.appExamples .box:nth-child(1)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(2)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(3)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(4)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(5)
+{
+  display: none;
+}
+.appExamples .box:nth-child(6)
+{
+  display: none;
+}
+.activeBoxes
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+.activeBox{
+  width: 100%;
+  height: 300px;
+  }
+  .activeBox .mainText 
+  {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    font-size: 16px;
+    top: 0;
+    left: 0;
+  }
+  .activeBox .mainText .h3t
+{
+  position: relative;
+  font-size: 18px;
+  font-weight: 700;
+  top: 0;
+  left: -25px;
+}
+.activeBox .mainText p
+{
+  position: relative;
+  top: 0;
+  text-align: center;
+  width: auto;
+  line-height: 2;
+  left: 0;
+  font-weight: 500;
+  
+}
+.activeBox .mainText .find {
+  text-decoration: none;
+color: #1f373d;
+font-weight: 700;
+font-size: 18px;
+}
+.activeBox .upperNumber h1 
+{
+  margin-bottom: 0;
+  
+  position: absolute;
+  left: -45px;
+  top: -75px;
+  font-size: 160px;
+}
+.activeBox .mainText .spanunderline {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.activeBox .mainText .spanunderline2 {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.activeBox .mainText .spanunderline3 {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.agentsExamples {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.agentsExamples .box {
+  
+  display: flex;
+  width: 350px;
+  height:380px;
+  background: #cdccce;
+}
+.agentsExamples .box:nth-child(1)
+{
+  margin: 30px 15px 130px 0;
+}
+.agentsExamples .box:nth-child(2)
+{
+  margin: 30px 15px 0 0;
+}
+.agentsExamples .box:nth-child(3)
+{
+  display: none;
+  margin: 0 0 0 15px;
+}
+.agentsExamples .box .downContent
+{
+  position: relative;
+  top: 380px;
+  background: #ffffff;
+  width: 350px;
+  height: 120px;
+  margin-bottom: 30px;
+}
+.mainBlock .backBox .locationBox
+{
+  left: 0;
+  width: 100%;
+}
+.mainBlock .backBox .locationBox h3
+{
+  font-size: 14px;
+}
+.mainBlock2 .backBox2 .locationBox2 h3
+{
+  font-size: 14px;
+}
+
+.mainBlock2 .backBox2 .locationBox2
+{
+  
+  left: 0;
+  width: 100%;
+}
+.mainBlock2 .textBox2
+{
+  margin-right: 50px;
+}
+}
+@media (min-width: 580px) and (max-width: 984px)
+{
+    
+  .header-nav
+  {
+    flex-direction: row;
+    
+  }
+  .contact-list 
+{
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
+  height: 50px;
+  bottom:0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  background: #ffcc01;
+  text-align: center;
+  text-decoration: none;
+}
+.contact-list .phone
+{
+  position: relative;
+  top: 45%;
+  
+  left: 15%;
+
+  font-size: 10px;
+}
+.contact-list .country
+{
+  position: relative;
+  top: 45%;
+  right: 20%;
+  
+  font-size: 10px;
+  
+}
+.banner-form .title {
+  font-size: 43px;
+  line-height: 1.27;
+  color: #1f373d;
+  letter-spacing: -3px;
+}
+.our-wrap .boxarea .box {
+  width: 130px;
+  height: 130px;
+}
+
+.boxarea .box p
+{
+  top: 15%;
+}
+.appExamples
+{
+  justify-content: center;
+}
+.appExamples .box {
+  
+  display: flex;
+  width: 350px;
+  height:380px;
+  background: #b1d7e8;
+}
+.appExamples .box:nth-child(1)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(2)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(3)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(4)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(5)
+{
+  display: none;
+}
+.appExamples .box:nth-child(6)
+{
+  display: none;
+}
+.activeBoxes
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+.activeBox{
+  width: 100%;
+  height: 300px;
+  }
+  .activeBox .mainText 
+  {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    font-size: 16px;
+    top: 0;
+    left: 0;
+  }
+  .activeBox .mainText .h3t
+{
+  position: relative;
+  font-size: 18px;
+  font-weight: 700;
+  top: 0;
+  left: -25px;
+}
+.activeBox .mainText p
+{
+  position: relative;
+  top: 0;
+  text-align: center;
+  width: auto;
+  line-height: 2;
+  left: 0;
+  font-weight: 500;
+  
+}
+.activeBox .mainText .find {
+  text-decoration: none;
+color: #1f373d;
+font-weight: 700;
+font-size: 18px;
+}
+.activeBox .upperNumber h1 
+{
+  margin-bottom: 0;
+  
+  position: absolute;
+  left: -45px;
+  top: -75px;
+  font-size: 200px;
+}
+.activeBox .mainText .spanunderline {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.activeBox .mainText .spanunderline2 {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.activeBox .mainText .spanunderline3 {
+  height: 3px;
+  margin-top: 15px;
+  width: 20%;
+  background: #1f373d;
+}
+.agentsExamples {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.agentsExamples .box {
+  
+  display: flex;
+  width: 350px;
+  height:380px;
+  background: #cdccce;
+}
+.agentsExamples .box:nth-child(1)
+{
+  margin: 30px 15px 130px 0;
+}
+.agentsExamples .box:nth-child(2)
+{
+  margin: 30px 15px 0 0;
+}
+.agentsExamples .box:nth-child(3)
+{
+  display: none;
+  margin: 0 0 0 15px;
+}
+.agentsExamples .box .downContent
+{
+  position: relative;
+  top: 380px;
+  background: #ffffff;
+  width: 350px;
+  height: 120px;
+  margin-bottom: 30px;
+}
+.mainBlock .backBox .locationBox
+{
+  left: 0;
+  width: 100%;
+}
+.mainBlock .backBox .locationBox h3
+{
+  font-size: 14px;
+}
+.mainBlock2 .backBox2 .locationBox2 h3
+{
+  font-size: 14px;
+}
+
+.mainBlock2 .backBox2 .locationBox2
+{
+  
+  left: 0;
+  width: 100%;
+}
+.mainBlock2 .textBox2
+{
+  margin-right: 50px;
+}
+.footer {
+  display: none;
+}
+}
+@media (min-width: 985px) and (max-width: 1200px)
+{
+  .menu__btn {
+    display: none;
+}
+.nav-list {
+  position: static;
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  list-style: none;
+  font-size: 13px;
+  font-weight: 400;
+}
+.nav-item + .nav-item {
+  padding-left: 15px;
+  
+}
+.nav-item
+{
+  margin-bottom: 0;
+}
+.appExamples
+{
+  justify-content: center;
+}
+.appExamples .box {
+  
+  display: flex;
+  width: 350px;
+  height:380px;
+  background: #b1d7e8;
+}
+.appExamples .box:nth-child(1)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(2)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(3)
+{
+  margin: 30px 30px 135px 30px;
+}
+.appExamples .box:nth-child(4)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(5)
+{
+  margin: 30px  30px 135px 30px;
+}
+.appExamples .box:nth-child(6)
+{
+  margin: 30px  30px 135px 30px;
+}
+.activeBox{
+  
+  width: 315px;
+ 
+  height: 315px;
+  }
+  .agentsExamples {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .agentsExamples .box { 
+    width: 30%;
+  }
+}
+
+@media (min-width: 1200px)
+{
+  .menu__btn {
+    display: none;
+}
+.nav-list {
+  position: static;
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  list-style: none;
+  font-size: 13px;
+  font-weight: 400;
+}
+.nav-item + .nav-item{
+  padding-left: 30px;
+}
+.nav-item
+{
+  margin-bottom: 0;
+}
+}
+
+
+
